--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +15,9 @@
     <u><h1>Education</h1></u>
   </header>
   <main>
-  <section>Class 9 Student Of <i><u>C.P.S</u></i> </section>
+  <section>Class 9 Student Of <i><u>C.P.S</u></i>
+  </section>
+  <hr>
   </main>
   <header>
    <u><h1>Skills</h1></u> 
@@ -29,12 +32,12 @@
     <li>HTML</li>
   </ul>
  <hr>
-<h1><u><b>My Favourite Subjects</b></u></h1>
-
+<h1>My Favourite Subjects</h1>
 <ul>
   <li>Physics</li>
   <li>Chemistry</li>
   <li>Mathematics</li>
 </ul>
+<b>bittu</b>
 </body>
 </html> 
