--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <h2>Documentary Video Editing (5 Months of Experience):</h2>
 <p><u><b>Editing documentaries</b></u> has been one of the most rewarding experiences for me. With five months of hands-on experience, I have learned how to craft stories through visuals, music, and transitions. This skill requires precision, a good sense of storytelling, and the ability to convey emotions effectively. My work reflects my passion for creating videos that leave a lasting impact.</p>
 <h2>Programming (Java, Python, HTML):</h2>
-<p>My programming skills in Java, Python, and HTML highlight my technical proficiency and problem-solving capabilities. Java and Python have introduced me to the world of application development and automation, while HTML has provided me with the foundation for web development. These skills represent my interest in technology and my goal to create innovative solutions in the future.
+<p><u><b>My programming skills</b></u> in Java, Python, and HTML highlight my technical proficiency and problem-solving capabilities. Java and Python have introduced me to the world of application development and automation, while HTML has provided me with the foundation for web development. These skills represent my interest in technology and my goal to create innovative solutions in the future.
 <br>
 These skills not only reflect my learning journey but also my eagerness to grow and adapt in a dynamic world.</p>
 <hr>
