--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Time Pass</title>
 </head>
 <body>
+<body2>
   <h1>Introduction</h1>
  <h4>This Page is Created by Bittu Using a Realme Smartphone</h4>
 
 
   <p>Welcome to <u><b>my personal page!</b></u>  I am proud to present this work, which I have created entirely using<u><b> a Realme smartphone</b></u>. This showcases how accessible technology has become in today’s world, enabling us to explore and learn new skills irrespective of the resources available. My aim here is to share a glimpse of who I am, my education, skills, and interests, all crafted with dedication and creativity.</p>
+</body2>
   <hr>
   <h1>Education</h1>
   <p>I am currently a Class 9 student studying at <u><b>C.P.S (Crescent Public School)</b></u>  . Being in Class 9 is a significant phase of my educational journey, where I am diving deeper into complex subjects and developing a strong academic foundation. At this stage, I am not just focusing on school curriculum but also exploring areas that interest me, such as programming, design, and video editing. My school has been instrumental in shaping my personality and preparing me for future challenges.Education for me is not just about grades but about acquiring knowledge and applying it to real-world problems. I believe that the right education empowers individuals to think critically, innovate, and contribute positively to society.</p>
