--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Introduction</h1>
 <img src="https://github.com/user-attachments/assets/a88f6f72-2e56-44b5-806b-2814330f3c80" height="200" width="150">
 
- <h4>This Page is Created by Bittu Using a Realme Smartphone</h4>
+ <h4>This Page is Created by <u><b>Anwarul Abedin nickname Bittu</b></u> Using a Realme Smartphone</h4>
   <p>Welcome to <u><b>my personal page!</b></u>  I am proud to present this work, which I have created entirely using<u><b> a Realme smartphone</b></u>. This showcases how accessible technology has become in today’s world, enabling us to explore and learn new skills irrespective of the resources available. My aim here is to share a glimpse of who I am, my education, skills, and interests, all crafted with dedication and creativity.</p>
 
   <hr>
