--- a/index.html
+++ b/index.html
@@ -8,9 +8,37 @@
     <title>Time Pass</title>
 </head>
 <body>
+
+
+<div class="boxes">
+    <div class="box"></div> 
+    <p>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <br>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+    <br>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+    <br>
+    <button>0</button>
+    <button style="background-color:#e09600;">+</button>
+    <button style="background-color:#e09600;">-</button>
+    <br>
+    <button style="background-color:#e09600;">×</button>
+    <button style="background-color:#e09600;">÷</button>
+    <button style="background-color:#969494;">=</button>
+    </p>
+    </div>
+    <h5>Made By Anwarul Abedin In Web</h5>
+
+
 <hr>
   <h1>Introduction</h1>
-<img src="https://github.com/user-attachments/assets/a88f6f72-2e56-44b5-806b-2814330f3c80" height="200" width="150">
 
  <h4>This Page is Created by <u><b>Anwarul Abedin nickname Bittu</b></u> Using a Realme Smartphone</h4>
   <p>Welcome to <u><b>my personal page!</b></u>  I am proud to present this work, which I have created entirely using<u><b> a Realme smartphone</b></u>. This showcases how accessible technology has become in today’s world, enabling us to explore and learn new skills irrespective of the resources available. My aim here is to share a glimpse of who I am, my education, skills, and interests, all crafted with dedication and creativity.</p>
