--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Time Pass</title>
 </head>
 <body>
-<div class="boxes">
+<div class="boxes"></div>
     <div class="box"></div> 
     <div>
     <k>
