--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Time Pass</title>
 </head>
 <body>
-<div class="boxes"></div>
+    <div class="boxes">
     <div class="box"></div> 
     
     <k>
@@ -32,6 +32,7 @@
     <button style="background-color:#e09600;">÷</button>
     <button style="background-color:#969494;">=</button>
     </k>
+    </div>
     
     <h5>Made By Anwarul Abedin In Web</h5>
 <hr>
