--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@ These skills not only reflect my learning journey but also my eagerness to grow 
 These subjects collectively inspire me to pursue a career in STEM, where I can combine my love for science and problem-solving to make a difference.
 </p>
 <hr>
+<h1>Future Plan</h1>
+<p>"My future is all about <u><b>technology!</b></u> I'm on a mission to become a well-rounded developer. Here's the roadmap:
+ <h2>Full-Stack Web Development</h2>
+I'm diving deep into both front-end (think user interfaces with languages like JavaScript, React, and Vue) and back-end (powering those interfaces with languages like Python, Node.js, and databases).
+ <h2> Flutter App Development</h2>
+I'm excited to build beautiful and performant cross-platform mobile apps using Google's Flutter framework.
+ <h2> C# Development</h2>
+Mastering C# will open doors to game development, .NET applications, and more.
+<h2> Android App Development</h2>
+I'm keen on leveraging Java  to create innovative and user-friendly Android applications.
+ <h2> AI Development</h2> The future is AI! I'm eager to explore machine learning, deep learning, and natural language processing to build intelligent systems.
+ <h2>Ethical Hacking</h2>
+ I'm passionate about cybersecurity. I plan to learn ethical hacking techniques to identify and prevent vulnerabilities in systems.
+This is a challenging but incredibly rewarding path. I'm dedicated to continuous learning and am excited to see where this journey takes me!"</p>
 <h3>Thank You</h3>
 <p>I appreciate you taking the time to read through my page. This space is a reflection of my journey so far and my aspirations for the future. I am constantly learning, growing, and striving to improve myself in every aspect of life. Thank you for your support and encouragement.</p>
 <hr>
