--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ These subjects collectively inspire me to pursue a career in STEM, where I can c
 <h1>Future Plan</h1>
 <p>"My future is all about <u><b>technology!</b></u> I'm on a mission to become a well-rounded developer. Here's the roadmap:
  <h2>Full-Stack Web Development</h2>
-I'm diving deep into both front-end (think user interfaces with languages like JavaScript, React, and Vue) and back-end (powering those interfaces with languages like Python, Node.js, and databases).
+I'm diving deep into both front-end (think user interfaces with languages HTML,CSS and JS) and back-end (powering those interfaces with language Node.js, and databases).
  <h2> Flutter App Development</h2>
 I'm excited to build beautiful and performant cross-platform mobile apps using Google's Flutter framework.
  <h2> C# Development</h2>
